--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = leonardo_accounts
+name = leonardo-accounts
 summary = Oscar Accounts to Leonardo CMS
 description-file =
     README.rst
